# herd

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  herdbot.yml
cli/: __init__.py  herdbot_cli.py
clients/esp32/examples/: imu_publisher.py  motor_subscriber.py
clients/esp32/herdbot/: __init__.py  client.py  discovery.py  sensors.py
clients/pico/examples/: distance_sensor.py
clients/pico/herdbot/: __init__.py  client.py
docs/: architecture.md  getting-started.md  testing.md
examples/01-blink-led/: README.md  main.py
herdbot/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
herdbot/.github/workflows/: ci.yml
herdbot/cli/: herdbot_cli.py
herdbot/clients/esp32/examples/: motor_subscriber.py
herdbot/clients/pico/herdbot/: __init__.py  client.py  sensors.py
herdbot/examples/01-blink-led/: main.py
herdbot/server/: __init__.py
herdbot/server/ai/: __init__.py  agent.py  base.py  manager.py
herdbot/server/api/: __init__.py
herdbot/server/api/routes/: ai.py  devices.py
herdbot/server/core/: config.py  device_registry.py
herdbot/server/dashboard/: __init__.py
herdbot/server/dashboard/static/: index.html
herdbot/server/viz/: __init__.py  formatters.py
herdbot/shared/schemas/: device.py  messages.py
scripts/: cloudflare_tunnel_manager.py  setup_tunnel.py  test_device.py
server/ai/: __init__.py  anthropic_provider.py  manager.py  openai_provider.py
server/api/: main.py
server/api/routes/: __init__.py  ai.py  devices.py  telemetry.py
server/core/: __init__.py  zenoh_hub.py
server/viz/: __init__.py  formatters.py  rerun_bridge.py
shared/: __init__.py
shared/schemas/: __init__.py  device.py  messages.py
tests/: __init__.py  test_api.py  test_schemas.py
