[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "herdbot"
version = "0.1.0"
description = "A lightweight robotics framework bridging simple Pi projects and full ROS stacks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jonas", email = "jonasnvs@gmail.com" }
]
keywords = ["robotics", "zenoh", "iot", "esp32", "raspberry-pi", "messaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Robotics",
]

dependencies = [
    "zenoh>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0.0",
    "msgpack>=1.0",
    "rerun-sdk>=0.16.0",
    "openai>=1.0",
    "anthropic>=0.25.0",
    "click>=8.0",
    "paho-mqtt>=2.0.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
herdbot = "cli.herdbot_cli:cli"

[project.urls]
Homepage = "https://github.com/jonasnvs/herdbot"
Repository = "https://github.com/jonasnvs/herdbot"
Documentation = "https://github.com/jonasnvs/herdbot/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["server", "shared", "cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=server --cov=shared --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
